--- a/package.json
+++ b/package.json
@@ -1,36 +1,35 @@
 {
-    "private": true,
-    "scripts": {
-        "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "npm run development -- --watch",
-        "watch-poll": "npm run watch -- --watch-poll",
-        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
-    },
-    "devDependencies": {
-        "axios": "^0.19.2",
-        "babel-plugin-component": "^1.1.1",
-        "cross-env": "^5.1",
-        "laravel-mix": "^5.0.1",
-        "lodash": "^4.17.13",
-        "node-sass": "^4.13.1",
-        "resolve-url-loader": "^2.3.1",
-        "sass": "^1.15.2",
-        "sass-loader": "^8.0.2",
-        "vue-router": "^3.1.5",
-        "vue-template-compiler": "^2.6.11"
-    },
-    "dependencies": {
-        "element-ui": "^2.13.0",
-        "fibers": "^4.0.2",
-        "html2canvas": "^1.0.0-rc.5",
-        "jspdf": "^1.5.3",
-        "laravel-echo": "^1.6.1",
-        "socket.io-client": "^2.3.0",
-        "vue": "^2.6.11",
-        "vue-axios": "^2.1.5",
-        "vuex": "^3.1.2"
-    }
+  "scripts": {
+      "dev": "npm run development",
+      "development": "node node_modules/cross-env/dist/bin/cross-env.js  NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+      "watch": "npm run development -- --watch",
+      "watch-poll": "npm run watch -- --watch-poll",
+      "hot": "node node_modules/cross-env/dist/bin/cross-env.js  NODE_ENV=development node_modules/webpack/bin/webpack.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+      "prod": "npm run production",
+      "production": "node node_modules/cross-env/dist/bin/cross-env.js  NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+  },
+  "devDependencies": {
+    "axios": "^0.20.0",
+    "babel-plugin-component": "^1.1.1",
+    "cross-env": "^7.0.2",
+    "laravel-mix": "^5.0.5",
+    "lodash": "^4.17.20",
+    "node-sass": "^4.14.1",
+    "resolve-url-loader": "^3.1.1",
+    "sass": "^1.26.10",
+    "sass-loader": "^10.0.0",
+    "vue-router": "^3.4.3",
+    "vue-template-compiler": "^2.6.12"
+  },
+  "dependencies": {
+    "element-ui": "^2.13.2",
+    "fibers": "^5.0.0",
+    "html2canvas": "^1.0.0-rc.7",
+    "jspdf": "^2.0.0",
+    "laravel-echo": "^1.8.1",
+    "socket.io-client": "^2.3.0",
+    "vue": "^2.6.12",
+    "vue-axios": "^2.1.5",
+    "vuex": "^3.5.1"
+  }
 }
